# Backend-Assessment-Test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup-dev.sh
apps/analytics/: models.py  urls.py
apps/analytics/management/commands/: setup_daily_metrics.py
apps/analytics/migrations/: 0001_initial.py
apps/analytics/views/: __init__.py  export.py  metrics.py  price_sensing.py
apps/core/: auth.py  export_utils.py  sql_utils.py
apps/core/tasks/: ingestion.py  maintenance.py  metrics.py  notifications.py
apps/customers/: models.py
apps/customers/migrations/: 0001_initial.py
apps/ingestions/: apps.py  comprehensive_data_processor.py  comprehensive_views.py  data_processor.py  models.py  urls.py  views.py
apps/ingestions/migrations/: 0001_initial.py  0002_orderingestchunk_content_type_and_more.py  0003_alter_ingestupload_status_and_more.py
apps/orders/: models.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_alter_order_order_status.py  0003_alter_order_options_alter_orderitem_options_and_more.py
apps/products/: models.py
apps/products/migrations/: 0001_initial.py
apps/stocks/: models.py  tasks.py  urls.py  views.py
apps/stocks/migrations/: 0001_initial.py  0002_alter_stockevent_source.py
apps/tenants/: models.py  price_views.py  urls.py
apps/tenants/management/commands/: load_tenants.py
apps/tenants/migrations/: 0001_initial.py
docker/nginx/: nginx.conf
docs/: BULK_DATA_GENERATION.md  BULK_STOCK_UPDATE.md  COMPREHENSIVE_INGESTION_GUIDE.md  INGESTION_GUIDE.md  MIGRATION_GUIDE.md  PRICE_SENSING_API_GUIDE.md  SQL_OPTIMIZATIONS.md
main/: asgi.py  celery.py  urls.py  views.py  wsgi.py
main/settings/: base.py  dev.py  prod.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: bulk_ingest.py  gen_dataset.py  resumable_export_client.py
tests/: test_comprehensive_ingestion.py  test_metrics_generation.py  test_price_sensing.py  test_stock_events_upload.py
